# dieture

./: README.md  pyproject.toml
.github/workflows/: ci.yml
dieture/: hooks.py  modules.txt
dieture/dieture/custom/: purchase_invoice.json  purchase_invoice_item.json
dieture/dieture/doctype/supplier_evaluation/: supplier_evaluation.js  supplier_evaluation.json  supplier_evaluation.py  test_supplier_evaluation.py
dieture/fixtures/: report.json  workflow.json  workflow_action_master.json  workflow_state.json
dieture/public/js/: previous_purchase_price.js  sales_invoice_customer_filter.js
dieture/public/python/: last_purchase_price.py
